// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVault - upgrade does not modify the state variables 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 103002,
}
`;

exports[`EthVault - upgrade does not modify the state variables 2`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 103216,
}
`;

exports[`EthVault - upgrade does not modify the state variables 3`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 103106,
}
`;

exports[`EthVault - upgrade does not modify the state variables 4`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 103666,
}
`;

exports[`EthVault - upgrade does not modify the state variables 5`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 103880,
}
`;

exports[`EthVault - upgrade does not modify the state variables 6`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 103770,
}
`;

exports[`EthVault - upgrade does not modify the state variables 7`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 103093,
}
`;

exports[`EthVault - upgrade works with valid call data 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 76331,
}
`;
